feat: 优化功能，完善文档
